HIDGamepadProvider should only be active when someone is interested in Gamepads. https://bugs.webkit.org/show_bug.cgi?id=134374

Reviewed by Darin Adler.

No new tests (Not yet a tested config)

* Modules/gamepad/GamepadManager.cpp:
(WebCore::GamepadManager::registerNavigator): Add some logging.
(WebCore::GamepadManager::unregisterNavigator): Ditto.

* platform/mac/HIDGamepadProvider.cpp:
(WebCore::HIDGamepadProvider::HIDGamepadProvider):
(WebCore::HIDGamepadProvider::connectionDelayTimerFired): Stop suppressing connection callbacks
(WebCore::HIDGamepadProvider::openAndScheduleManager):
(WebCore::HIDGamepadProvider::closeAndUnscheduleManager): Stop listening for gamepad events, and clear
  all current gamepads.
(WebCore::HIDGamepadProvider::startMonitoringGamepads): If the first client, call openAndScheduleManager
(WebCore::HIDGamepadProvider::stopMonitoringGamepads): If the last client, call closeAndUnscheduleManager
(WebCore::HIDGamepadProvider::deviceAdded): If this callback came while we were suppressing connection
  callbacks, it is a startup event for already-connected gamepads. Stop suppressing callbacks in a later
  spin of the runloop.
(WebCore::HIDGamepadProvider::deviceRemoved):
* platform/mac/HIDGamepadProvider.h:
(WebCore::HIDGamepadProvider::setShouldDispatchCallbacks): Deleted.

Canonical link: https://commits.webkit.org/152389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170549 268f45cc-cd09-0410-ab3c-d52691b4dbfc